fix: bookMapper 추가로 인한 메서드 및 테스트코드 수정